--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -8,14 +8,19 @@ logging:
 security:
   oauth2:
     client:
-      client-id: client
-      client-secret: secret
-#      scope: all
-#      authorized-grant-types: authorization_code,refresh_token,password
-      access-token-validity-seconds: 3600
-      refresh-token-validity-seconds: 3600
+      clientId: client
+      clientSecret: secret
+      scopes: all
+      authorizedGrantTypes: authorization_code, refresh_token, password, implicit, client_credentials
+      accessTokenValiditySeconds: 3600
+      refreshTokenValiditySeconds: 3600
 
 spring:
+  output:
+    ansi:
+      enabled: always
+  jackson:
+    default-property-inclusion: non_null
   h2:
     console:
       enabled: true
