--- a/authorization-server/Dockerfile
+++ b/authorization-server/Dockerfile
@@ -11,10 +11,10 @@ VOLUME /tmp
 EXPOSE 8081
 
 # The application's jar file
-ARG JAR_FILE=target/authorization-0.0.1-SNAPSHOT.jar
+ARG JAR_FILE=target/authorization-server-0.0.1-SNAPSHOT.jar
 
 # Add the application's jar to the container
-ADD ${JAR_FILE} authorization.jar
+ADD ${JAR_FILE} authorization-server.jar
 
 # Run the jar file
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/authorization.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/authorization-server.jar"]
