--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>io.fdlessard.codebites.oauth2</groupId>
-    <artifactId>authorization</artifactId>
+    <artifactId>authorization-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>authorization-server</name>
     <description>Demo project for Spring Boot</description>
