--- a/resource-server/Dockerfile
+++ b/resource-server/Dockerfile
@@ -8,13 +8,13 @@ LABEL maintainer="fdlessard@gmail.com"
 VOLUME /tmp
 
 # Make port 8080 available to the world outside this container
-EXPOSE 8081
+EXPOSE 8080
 
 # The application's jar file
 ARG JAR_FILE=target/resource-server-0.0.1-SNAPSHOT.jar
 
 # Add the application's jar to the container
-ADD ${JAR_FILE} authorization.jar
+ADD ${JAR_FILE} resource-server.jar
 
 # Run the jar file
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/resource-server.jar"]
