--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -139,12 +139,30 @@
                 </configuration>
             </plugin>
 
-
-
             <plugin>
+
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.31.0</version>
+
+                <executions>
+                    <execution>
+                        <id>start</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>start</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>stop</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
                 <configuration>
                     <registry>registry.hub.docker.com</registry>
                     <authConfig>
@@ -163,6 +181,11 @@
                                 <ports>
                                     <port>8081:8081</port>
                                 </ports>
+                                <wait>
+                                    <!-- Check for this URL to return a 200 return code .... -->
+                                    <url>http://localhost:8081/health</url>
+                                    <time>120000</time>
+                                </wait>
                             </run>
                         </image>
                     </images>
