--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -28,6 +28,28 @@ spring:
       enabled: always
   jackson:
     default-property-inclusion: non_null
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        trace: true
+  datasource:
+    platform: h2
+    url: jdbc:h2:mem:db;MODE=PostgreSQL
+    username: sa
+    password:
+    driverClassName: org.h2.Driver
+    initialization-mode: always
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
 
 
 ---
@@ -43,7 +65,7 @@ spring:
         trace: true
   datasource:
     platform: h2
-    url: jdbc:h2:mem:db;MODE=PostgreSQL
+    url: jdbc:h2:mem:testdb;MODE=PostgreSQL
     username: sa
     password:
     driverClassName: org.h2.Driver
